--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <html lang="%lang%">
 	<head>
 		<meta charset="utf-8" />
+		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 		<script>
