chore: save recent changes
- Update Umami analytics ID
- Update Ticker schema (icon, isActive boolean)
- Add active country count to Map page
- Update Browserslist to fix CSS warnings
- Clean up unused files and general UI improvements

--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,8 @@
 	<link rel="icon" href="/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	%sveltekit.head%
-	<script defer src="https://umami.erkut.dev/script.js" data-website-id="aeb69b49-5050-49d4-a540-b8ece0381099">
-	</script>
+	<script defer src="https://umami.erkut.dev/script.js"
+		data-website-id="df4daa5d-7de3-4dc2-bc27-d87e2cd06c92"></script>
 	<script>
 		// Immediate theme application to prevent flash
 		const theme =
@@ -15,7 +15,6 @@
 			(window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
 		document.documentElement.setAttribute('data-theme', theme);
 	</script>
-
 </head>
 
 <body data-sveltekit-preload-data="hover">
