--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="/favicon.png" />
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3" />
+	<link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png?v=3" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	%sveltekit.head%
 	<script defer src="https://umami.erkut.dev/script.js"
